# DigitalNews

./: .gitignore  DigitalNews.pro  article.cpp  article.hpp  button.cpp  button.hpp  images.qrc  main.cpp  settings.hpp  topbar.cpp  topbar.hpp  view.cpp  view.hpp
CMake/: FindXalanC.cmake  FindXercesC.cmake
gui/: DigitalNews.pro  IvyBinder.cpp  IvyBinder.hpp  IvyLoop.cpp  IvyLoop.hpp  article.cpp  article.hpp  button.cpp  button.hpp  images.qrc  main.cpp  settings.hpp  topbar.cpp  topbar.hpp  view.cpp  view.hpp
rss/: CMakeLists.txt
rss/libs/feedreader/include/feedreader/: Entry.hpp  MemParseHandlers.hpp
rss/libs/feedreader/src/: Entry.cpp  Feed.cpp  MemParseHandlers.cpp  Utils.cpp  Validator.cpp  XmlGlobalState.cpp
rss/src/: main.cpp
